<resources>
    <string name="app_name">Social</string>
    <string name="error">ERROR!</string>
    <string name="alert">ALERT!</string>
    <string name="success">SUCCESS!</string>
    <string name="alertMessage">Do you wish to continue?</string>
    <string name="errorMessage">Something went wrong</string>
    <string name="successMessage">Your action is completed</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="please_confirm_your_country_code_and_enter_your_phone_number">Please confirm your country code and enter your phone number</string>
    <string name="countryCodePlaceHolder">+1</string>
    <string name="phone_number">Phone Number</string>
    <string name="send_code">Send Code</string>
    <string name="search">Search</string>
    <string name="enter_code">Enter Code</string>
    <string name="we_have_sent_you_an_sms_with_the_code_to">We have sent you an SMS with the code to </string>
    <string name="resend_code">Resend Code</string>
    <string name="verify">Verify</string>
    <string name="social">Social</string>
    <string name="first_name_required">First Name (Required)</string>
    <string name="last_name_optional">Last Name (Optional)</string>
</resources>