<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AuthenticationVerifyActivity">

    <TextView
        android:id="@+id/enterPhoneNumberText"
        style="@style/primaryTextBoldLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_85sdp"
        android:text="@string/enter_code"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sentCodeOnNumberTextView"
        style="@style/primaryTextRegularSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="@dimen/_60sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/we_have_sent_you_an_sms_with_the_code_to"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterPhoneNumberText" />

    <LinearLayout
        android:id="@+id/authVerifyOtpLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_35sdp"
        app:layout_constraintTop_toBottomOf="@+id/sentCodeOnNumberTextView">

        <EditText
            android:id="@+id/authVerifyOtpEditText1"
            style="@style/verify_otp_editText_style"
            android:layout_marginEnd="@dimen/_20sdp"
            android:importantForAutofill="no"
            android:maxLength="1"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/authVerifyOtpEditText2"
            style="@style/verify_otp_editText_style"
            android:layout_marginEnd="@dimen/_20sdp"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            android:id="@+id/authVerifyOtpEditText3"
            style="@style/verify_otp_editText_style"
            android:layout_marginEnd="@dimen/_20sdp"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/authVerifyOtpEditText4"
            style="@style/verify_otp_editText_style"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/verifyButton"
        style="@style/buttonBoldStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/_37sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:text="@string/verify"
        app:layout_constraintEnd_toEndOf="@+id/authVerifyOtpLayout"
        app:layout_constraintStart_toStartOf="@+id/authVerifyOtpLayout"
        android:layout_marginStart="@dimen/_minus10sdp"
        android:layout_marginEnd="@dimen/_minus10sdp"
        app:layout_constraintTop_toBottomOf="@+id/authVerifyOtpLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>